--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/tauri.svg" />
+    <meta name="description" content="Print Estimator Pro - professional print production estimation for paper, printing, binding, finishing, freight, and quoting." />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#2563eb" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Print Estimator Pro" />
+    <meta property="og:description" content="Professional print estimation with multi-quantity comparison, costing breakdowns, and quotation workflows." />
+    <meta property="og:image" content="/tauri.svg" />
+    <meta property="og:url" content="https://print-estimator.local/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Print Estimator Pro" />
+    <meta name="twitter:description" content="Professional print estimation and quotation platform." />
+    <meta name="twitter:image" content="/tauri.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
